Fix facepile overflow

--- a/src/Facepile.module.css
+++ b/src/Facepile.module.css
@@ -8,6 +8,7 @@
   width: 20px;
   height: 20px;
   border-radius: 20px;
+  background-color: #0dbd8b;
 }
 
 .facepile .avatar > * {
@@ -23,4 +24,8 @@
   font-size: 14px;
   width: 20px;
   line-height: 20px;
+}
+
+.facepile .avatar.additional span {
+  font-size: 12px;
 }
